# electric-mesa

./: .gitignore  LICENSE  README.md  agents.py  main.py  model.py  pyproject.toml
docs/: ElectricityAuctions.ipynb
notebooks/: colab_only_electric_mesa.ipynb  experiment.ipynb  experiment_colab.ipynb
