[project]
name = "electric-mesa"
version = "0.1.0"
description = "Agent-based model of electricity markets using Mesa"
requires-python = ">=3.12.8"
dependencies = [
    "mesa",
    "numpy",
    "ipywidgets",
    "ipython",
    "matplotlib",
    "seaborn",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 96
target-version = "py312"
exclude = ["tests", "docs", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]


